--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -24,12 +24,10 @@
             <span class="icon-search icons-header icon-cursor-search"></span>
           </form>
             </li>
-            <li>
-              <span class="favorites-icon icons-header icon-cursor-pointer"></span>
+            <li class="favorites-list">
               <a href="#" class="favorites">Закладки: 0</a>
             </li>
-            <li>
-              <span class="basket-icon icons-header icon-cursor-pointer"></span>
+            <li class="basket-list">
               <a href="#" class="basket">Корзина: 0</a>
             </li>
             <li>
@@ -40,43 +38,33 @@
       </div>
       <div class="lightblue-background">
         <div class="container header-panel">
-            <p class="title"> Интернет-магазин <br>
+            <p class="title">
+              Интернет-магазин
               строительных материалов <br>
               и инструментов для ремонта
             </p>
             <section class="contact-info-header contact-info-header-catalog">
               <h2 class="visually-hidden">Контактный телефон:</h2>
-              <svg class="icon-phone" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="19px" height="19px" viewBox="0 0 19 19" enable-background="new 0 0 19 19" xml:space="preserve">
-                <g id="UrwUhy_1_">
-                <g>
-                <path fill="#B7BFC8" d="M15.572,18.985c-0.312,0-0.629,0-0.941,0c-4.129-0.488-7.157-2.408-9.359-4.864
-                  c-2.21-2.461-3.954-5.629-4.294-9.893c0-0.382,0-0.762,0-1.144C1.056,2.31,1.437,1.78,1.876,1.327
-                  C2.425,0.766,3.25,0.044,4.002,0.019c0.554-0.018,1.5,0.38,1.879,0.899C6.21,1.364,6.385,2.257,6.537,2.921
-                  c0.154,0.671,0.505,1.643,0.408,2.289C6.797,6.217,5.458,6.644,5.066,7.376c1.307,3.135,3.443,5.439,6.293,7.031
-                  c0.715-0.392,1.346-1.572,2.332-1.595c0.359-0.009,0.818,0.178,1.184,0.286c0.402,0.121,0.75,0.275,1.104,0.408
-                  c0.596,0.224,1.648,0.521,2.004,1.021c0.365,0.513,0.57,1.356,0.49,1.879C18.309,17.447,16.594,18.603,15.572,18.985z"/></g></g></svg>
-                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+              <a href="tel:+78125550555">+7 (812) 555-05-55</a>
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </section>
           <section class="user-panel">
             <h2 class="visually-hidden">Данные пользователя</h2>
             <ul class="user">
               <li class="username-block">
-                <a href="profile.html"><span class="icon-user icon-cursor-pointer"></span></a>
-                <a href="logout.html"><span class="icon-logout icon-cursor-pointer"></span></a>
+                <a href="logout.html"><span aria-label="Выход из учетной записи" class="icon-logout icon-cursor-pointer"></span></a>
                 <a href="profile.html" class="username">Равшан Джамшутович</a>
               </li>
               <li class="orders-lc">
                 <a href="#" class="user-orders">Мои заказы</a>
-                <img src="img/shape-1.svg" alt="" width="6" height="7">
+                <img src="img/shape-1.svg" alt="Разделитель" width="6" height="7">
                 <a href="#" class="user-personal-area">Личный кабинет</a>
               </li>
             </ul>
           </section>
         </div>
-      <div class="header-nav-div">
-          <nav class="header-navigation container m-top-34">
+        <div class="header-nav-div">
+          <nav class="header-navigation container m-top-40">
             <ul>
               <li><a href="index.html">Главная</a></li>
               <li><a href="#">Компания</a></li>
@@ -88,17 +76,14 @@
             </ul>
           </nav>
         </div>
-      </div>
-    </header>
+    </div>
+  </header>
     <main class="cuprum-family">
       <div class="container">
         <ul class="breadcrumbs mp-null">
-          <li><img src="img/icon-home.svg" alt="" width="15" height="12"></li>
-          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
+          <li><img aria-label="Главная" src="img/icon-home.svg" alt="Главная" width="15" height="12"></li>
           <li>Каталог</li>
-          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
           <li>Инструмент</li>
-          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
           <li>Перфораторы</li>
         </ul>
         <h1 class="m-null">Перфораторы</h1>
@@ -184,13 +169,13 @@
               </div>
               <div class="up-down-filter">
                 <a href="#">
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg aria-label="По возрастанию" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 	 width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
                   <polygon fill="#c5c5c5" points="5.5,0 0,10 11,10 "/>
                   </svg>
                 </a>
                 <a href="#">
-                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg aria-label="По убыванию" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
                   <polyline fill="#c5c5c5" points="5.5,10 0,0 11,0 "/>
                   </svg>
@@ -204,8 +189,8 @@
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -221,8 +206,8 @@
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -234,13 +219,13 @@
                 <p class="current-price"><ins>25500 Р.</ins></p>
               </li>
               <li>
-                <span class="new-catalog-item"></span>
+                <span aria-label="Новый товар" class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -248,7 +233,7 @@
                   <span>BFG 2000</span>
                   </a>
                 </h3>
-                <p><del><br></del></p>
+                <p><del></del></p>
                 <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
               <li>
@@ -256,8 +241,8 @@
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -269,13 +254,13 @@
                 <p class="current-price"><ins>15500 Р.</ins></p>
               </li>
               <li>
-                <span class="new-catalog-item"></span>
+                <span aria-label="Новый товар" class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -291,8 +276,8 @@
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -300,17 +285,17 @@
                   <span>BFG 2000</span>
                   </a>
                 </h3>
-                <p><del><br></del></p>
+                <p><del></del></p>
                 <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
               <li>
-                <span class="new-catalog-item"></span>
+                <span aria-label="Новый товар" class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -326,8 +311,8 @@
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -343,8 +328,8 @@
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <button class="buy-btn" type="button" name="buy">Купить</button>
-                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
+                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -352,7 +337,7 @@
                   <span>BFG 2000</span>
                   </a>
                 </h3>
-                <p><del><br></del></p>
+                <p><del></del></p>
                 <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
             </ul>
@@ -396,7 +381,7 @@
           </div>
           <nav class="catalog-navigation">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-            +7 (812) 555-05-55</p>
+            <a class="tel-footer" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
             <ul>
               <li><a href="#">Материалы</a></li>
               <li><a href="#">Техника</a></li>
@@ -414,14 +399,14 @@
               Все права защищены</p>
           </div>
           <div class="social-media">
-            <a href="#"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
-            <a href="#"><div><img src="img/facebook.svg" alt="Фэйсбук" width="12" height="22"></div></a>
-            <a href="#"><div><img src="img/instagram.svg" alt="Инстаграм" width="21" height="21"></div></a>
+            <a href="#"><img aria-label="Вконтакте" src="img/vk.svg" alt="Вкотакте" width="26" height="15"></a>
+            <a href="#"><img aria-label="Фэйсбук" src="img/facebook.svg" alt="Фэйсбук" width="12" height="22"></a>
+            <a href="#"><img aria-label="Инстаграм" src="img/instagram.svg" alt="Инстаграм" width="21" height="21"></a>
           </div>
           <div class="feedback-developer">
-            <p>Обратная связь: <br>
+            <p>Обратная связь:
               <a href="#">mail@htmlacademy.ru</a></p>
-            <p>Разработано — <br>
+            <p>Разработано —
               <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
           </div>
         </section>
