Исправил ошибки валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -189,8 +189,8 @@
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -206,8 +206,8 @@
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -224,8 +224,8 @@
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -241,8 +241,8 @@
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -259,8 +259,8 @@
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -276,8 +276,8 @@
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -294,8 +294,8 @@
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -311,8 +311,8 @@
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
@@ -328,8 +328,8 @@
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
                 <div class="btns-catalog-element">
-                  <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-                  <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+                  <a href="#" class="buy-btn">Купить</a>
+                  <a href="#" class="to-fav-btn">В закладки</a>
                 </div>
                 <h3>
                   <a href="catalog-item.html">
