--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
               <img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </a>
             <div class="btns-catalog-element">
-              <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-              <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+              <a href="#" class="buy-btn">Купить</a>
+              <a href="#" class="to-fav-btn">В закладки</a>
             </div>
             <h3>
               <a href="#">
@@ -152,8 +152,8 @@
               <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </a>
             <div class="btns-catalog-element">
-              <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-              <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+              <a href="#" class="buy-btn">Купить</a>
+              <a href="#" class="to-fav-btn">В закладки</a>
             </div>
             <h3>
               <a href="#">
@@ -169,8 +169,8 @@
               <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </a>
             <div class="btns-catalog-element">
-              <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-              <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+              <a href="#" class="buy-btn">Купить</a>
+              <a href="#" class="to-fav-btn">В закладки</a>
             </div>
             <h3>
               <a href="#">
@@ -187,8 +187,8 @@
               <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </a>
             <div class="btns-catalog-element">
-              <a href="#"><button class="buy-btn" type="button" name="buy">Купить</button></a>
-              <a href="#"><button class="to-fav-btn" type="button" name="to-favorite">В закладки</button></a>
+              <a href="#" class="buy-btn">Купить</a>
+              <a href="#" class="to-fav-btn">В закладки</a>
             </div>
             <h3>
               <a href="#">
@@ -314,7 +314,7 @@
             <p>Вы можете забрать товар сами, <br>
               заехав в наш офис:</p>
             <a href="#"><img src="img/map.png" width="300" height="158" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
-            <a href="#"><button type="button" name="contact-us">Заблудились? Напишите нам!</button></a>
+            <a href="#" class="contact-us-btn">Заблудились? Напишите нам!</a>
           </section>
         </div>
       </div>
